# data_visualization

small_project/: README.md  dimensionality_reduction.py  embedding.pkl  mammoth_3d.json  markdown.py  pyproject.toml  requirements.txt
small_project/utils/: gmm.py  pca.py
